# PETSc_test

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix_arma.cpp  Matrix_arma.h  PETCs_test.pro  PETCs_test.pro.user.da1df9a  PETCs_test_Behzad.pro  PETCs_test_Behzad_WSL.pro  PETSc_test.pro  PETSc_test_Behzad.pro  Particle.cpp  Particle.h  Pathway.cpp  Pathway.h  PathwaySet.cpp  PathwaySet.h  PathwaySetWiener.cpp  PathwaySetWiener.h  PathwayWiener.cpp  PathwayWiener.h  TimeSeries.hpp  Utilities.cpp  Utilities.h  Vector.cpp  Vector.h  Vector_arma.cpp  Vector_arma.h  check_petsc_ldd_openblas.sh  copula_analysis.cpp  copula_analysis.h  diag_petsc_link.sh  diag_std_headers.sh  grid.cpp  grid.h  grids.odg  main.cpp  (+13 more)
Backup/: TimeSeries.h  TimeSeries.hpp  TimeSeriesSet.h  TimeSeriesSet.hpp
gnuplotscripts/: _plot_BTC_log.gp  plot_BTC.gp  plot_BTC_both.gp  plot_BTC_both_100.gp  plot_BTC_both_100_auto.gp  plot_BTC_both_v2.gp  plot_BTC_compare.gp  plot_BTC_derivative_compare.gp  plot_BTC_derivative_compare.gp.md  plot_BTC_derivative_compare_Ds_folders_allX.gp  plot_BTC_derivative_compare_Ds_upscaled_folders_allX.gp  plot_BTC_derivative_compare_Ds_upscaled_folders_allX_red.gp  plot_BTC_from_fine_and_upscaled_auto.gp  plot_BTC_log (Copy).gp  plot_BTC_log.gp  plot_BTC_mean_vs_mean.gp  plot_BTC_upscaled_vs_upscaled.gp  plot_FirstPassage.gp  plot_K_correlations.gp  plot_advective_correlation.gp  plot_advective_correlation_100.gp  plot_correlations.gp  plot_correlations_100.gp  plot_diffusion_x_correlation.gp  plot_mean_plus_calibration (auto).gp  (+8 more)
(+16 files in other folders)
